# corrugated_estimating

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
cad_examples/: BLISS_30x20x18.dxf  DIECUT_12x9x3.dxf  FOL_20x14x12.dxf  HSC_18x14x6.dxf  RAG_14x10x10.dxf  RSC_16x12x10.dxf  SFF_10x8x6.dxf  TRAY_24x16x4.dxf  WORTHINGTON_14x14x18.dxf
corrugated_estimating/: api.py  hooks.py  modules.txt
corrugated_estimating/corrugated_estimating/: api.py  cad_generator.py  dieline_renderer.py  layout.py  routing.py  setup.py  utils.py
corrugated_estimating/corrugated_estimating/data/: cad_examples.py  elkcorr_operating_plan.py
corrugated_estimating/corrugated_estimating/doctype/board_grade_up_charge/: board_grade_up_charge.json  board_grade_up_charge.py
corrugated_estimating/corrugated_estimating/fixtures/: custom_field.json
corrugated_estimating/corrugated_estimating/integration/: bom_bridge.py  job_card_bridge.py  sales_order_bridge.py
corrugated_estimating/doctype/corrugated_board_grade/: corrugated_board_grade.json
corrugated_estimating/doctype/corrugated_box_style/: corrugated_box_style.json
corrugated_estimating/doctype/corrugated_estimate/: corrugated_estimate.js
corrugated_estimating/doctype/corrugated_flute/: corrugated_flute.json
corrugated_estimating/doctype/corrugated_print_method/: corrugated_print_method.py
corrugated_estimating/fixtures/: custom_field.json
corrugated_estimating/public/js/: corrugated_estimating.bundle.js  job_card_estimate.js  sales_order_estimate.js
(+44 files in other folders)
