[project]
name = "corrugated_estimating"
version = "0.0.1"
description = "Corrugated box estimating app for Frappe/ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dependencies = ["ezdxf>=1.0"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "corrugated_estimating"
